--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
   "name": "make-template-step-by-step",
   "version": "1.0.0",
-  "main": "index.js",
   "author": "tangweikun <819573105@qq.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack serve --open",
+    "build": "webpack"
+  },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
     "webpack": "^5.41.1",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
