--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "author": "tangweikun <819573105@qq.com>",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint src/*",
+    "lint:fix": "eslint src/* --fix",
     "dev": "webpack serve --open",
     "build": "webpack"
   },
@@ -18,8 +20,18 @@
     "@babel/preset-typescript": "^7.14.5",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "prettier": "^2.3.2",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
     "webpack": "^5.41.1",
