--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "dev": "webpack serve --open",
     "build": "webpack"
   },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": "npm run lint:fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -33,6 +41,8 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.0.0",
     "prettier": "^2.3.2",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
