--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     ]
   },
   "dependencies": {
+    "antd": "^4.16.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -32,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -43,8 +45,11 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.0",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.2",
+    "style-loader": "^3.0.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
     "webpack": "^5.41.1",
