--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "less-loader": "^10.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.2",
+    "react-dev-utils": "^11.0.4",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
