feat: add i18next

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,8 @@
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "import/prefer-default-export":"off",
+    "react/destructuring-assignment": "off",
     "react/jsx-filename-extension": [
       "warn",
       {
