--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "dependencies": {
     "antd": "^4.16.6",
+    "i18next": "^20.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
